add correct route of img

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="box__p">
-            <img src="/img/perfil.jpg" alt="Kevin B. Agüero">
+            <img src="img/perfil.jpg" alt="Kevin B. Agüero">
         </div>
 
         <div class="box__p">
@@ -61,19 +61,19 @@
         <h1 class="service__section">Servicios</h1>
         <div class="box__service">
             <div class="box">
-                <img src="/img/code.svg" alt="">
+                <img src="img/code.svg" alt="">
                 <h3>Desarrollo Web</h3>
                 <p>Realizo desarollo web a medida, muy bien optimizados. Webs estructuradas y con diseño responsive para que se vea bien en el cualquier dispositivo.</p>
             </div>
 
             <div class="box">
-                <img src="/img/seo.svg" alt="">
+                <img src="img/seo.svg" alt="">
                 <h3>Seo</h3>
                 <p>Posicionamiento web, desarrollo de las estrategia de SEO organicas, analisis y posicionamiento de palabras clave para mejorar su presencia en internet.</p>
             </div>
 
             <div class="box">
-                <img src="/img/tool.svg" alt="">
+                <img src="img/tool.svg" alt="">
                 <h3>Mantenimiento</h3>
                 <p>Soporte y Mantenimiento para tu web en cualquier momento que lo necesite. Para que se mantenga siempre en funcionamiento y actualizado.</p>
             </div>
@@ -89,15 +89,15 @@
         <h2>Contacto</h2>
         <div class="footer__items">
             <a href="#" class="footer__items" target="_blank">
-                <img src="/img/instagram.svg">
+                <img src="img/instagram.svg">
                 /kevinbaguero
             </a>
             <a href="#" class="footer__items" target="_blank">
-                <img src="/img/linkiden.svg">
+                <img src="img/linkiden.svg">
                 /kevinbaguero
             </a>
             <a href="#" class="footer__items" target="_blank">
-                <img src="/img/mail.svg">
+                <img src="img/mail.svg">
                 /kevinbaguero@gmail.com
             </a>
         </div>
