Agregando seccion Proyectos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="nav__container">
                 <h1 class="nav__logo">Kevin B. Agüero</h1>
                 <label for="menu" class="nav__label">
-                    <img src="img/menu.svg" class="nav__img">
+                    <img src="../img/menu.svg" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
 
@@ -44,7 +44,7 @@
         </div>
 
         <div class="box__p">
-            <img src="img/perfil.jpg" alt="Kevin B. Agüero">
+            <img src="../img/perfil.jpg" alt="Kevin B. Agüero">
         </div>
 
         <div class="box__p">
@@ -61,22 +61,36 @@
         <h1 class="service__section">Servicios</h1>
         <div class="box__service">
             <div class="box">
-                <img src="img/code.svg" alt="">
+                <img src="../img/code.svg" alt="">
                 <h3>Desarrollo Web</h3>
                 <p>Realizo desarollo web a medida, muy bien optimizados. Webs estructuradas y con diseño responsive para que se vea bien en el cualquier dispositivo.</p>
             </div>
 
             <div class="box">
-                <img src="img/seo.svg" alt="">
+                <img src="../img/seo.svg" alt="">
                 <h3>Seo</h3>
                 <p>Posicionamiento web, desarrollo de las estrategia de SEO organicas, analisis y posicionamiento de palabras clave para mejorar su presencia en internet.</p>
             </div>
 
             <div class="box">
-                <img src="img/tool.svg" alt="">
+                <img src="../img/tool.svg" alt="">
                 <h3>Mantenimiento</h3>
                 <p>Soporte y Mantenimiento para tu web en cualquier momento que lo necesite. Para que se mantenga siempre en funcionamiento y actualizado.</p>
             </div>
+        </div>
+
+    </section>
+
+    <section class="projects">
+        <h1 class="service__section">Proyectos</h1>
+        <div class="container_video">
+            <figure>
+                <video src="../img/tetris.mp4" loop="loop" width="70.33%" autoplay="autoplay" muted="muted"> </video>
+                <div class="info_video">
+                    <h4>Tetris</h4>
+                    <a href="kevinbaguero.com" target="_blank">Ver Proyecto</a>
+                 </div>
+            </figure>
         </div>
 
     </section>
@@ -89,15 +103,15 @@
         <h2>Contacto</h2>
         <div class="footer__items">
             <a href="#" class="footer__items" target="_blank">
-                <img src="img/instagram.svg">
+                <img src="../img/instagram.svg">
                 /kevinbaguero
             </a>
             <a href="#" class="footer__items" target="_blank">
-                <img src="img/linkiden.svg">
+                <img src="../img/linkiden.svg">
                 /kevinbaguero
             </a>
             <a href="#" class="footer__items" target="_blank">
-                <img src="img/mail.svg">
+                <img src="../img/mail.svg">
                 /kevinbaguero@gmail.com
             </a>
         </div>
