Agregando enlace a tetris

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <video src="../img/tetris.mp4" loop="loop" width="70.33%" autoplay="autoplay" muted="muted"> </video>
                 <div class="info_video">
                     <h4>Tetris</h4>
-                    <a href="kevinbaguero.com" target="_blank">Ver Proyecto</a>
+                    <a href="https://kevinbaguero.github.io/tetris/" target="_blank">Ver Proyecto</a>
                  </div>
             </figure>
         </div>
